--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Gânduri
+title: 'Gânduri'
 email: dorinoltean@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   De cealaltă parte
@@ -40,3 +40,7 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+google_analytics: true
+footer-links:
+  rss: true
